# oltp-arrow

./: Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/log/: Cargo.toml
crates/metric/: Cargo.toml
crates/oltp/: Cargo.toml
crates/oltp/proto/opentelemetry/proto/common/v1/: common.proto
crates/oltp/proto/opentelemetry/proto/events/v1/: events.proto
crates/oltp/proto/opentelemetry/proto/logs/v1/: logs.proto
crates/oltp/proto/opentelemetry/proto/metrics/v1/: metrics.proto
crates/oltp/proto/opentelemetry/proto/resource/v1/: resource.proto
crates/oltp/proto/opentelemetry/proto/trace/v1/: trace.proto  trace_config.proto
crates/oltp/src/: build.rs  lib.rs
crates/trace/: Cargo.toml
crates/trace/src/: arrow.rs  attribute.rs  event.rs  link.rs  main.rs  span.rs
crates/trace/src/arrow/: attribute.rs  event.rs  link.rs  mod.rs  schema.rs  span.rs  statistics.rs
crates/trace/src/protobuf/: mod.rs
data/: 2_traces.json  single_trace.json  trace.json  traces.json
