[package]
name = "trace"
version = "0.1.0"
edition = "2018"

[dependencies]
common = {path = "../common"}
oltp = {path = "../oltp"}

arrow = {version="5"}
serde = "1"
serde_json = "1"
prost = "0.8"
lz4_flex = { version = "0.9", default-features = false }
chrono = "0.4"
bytes = "1"
twox-hash = "1"
itertools = "0.10"
clap = "3.0.0-beta.4"